<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/group_call"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ico_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_shopping_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/menu_shopping_cart" />
        <item
            android:id="@+id/menu_tvorders"
            android:icon="@drawable/ico_menu_gestion_pedidos"
            android:title="@string/menu_TVorders" />

    </group>
    <item
        android:title="Acciones extras">
        <menu >
            <group
                android:id="@+id/group_extras"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_profile"
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="@string/menu_profile" />
                <item
                    android:id="@+id/menu_exit"
                    android:icon="@drawable/ico_menu_salir"
                    android:title="@string/menu_exit" />
            </group>
        </menu>
    </item>
</menu>