<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/group_call"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ico_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_inventory"
            android:icon="@drawable/ico_menu_gestion_inventario"
            android:title="@string/menu_inventory" />
        <!--<item
            android:id="@+id/menu_sales"
            android:icon="@drawable/ico_menu_registro_ventas"
            android:title="@string/menu_sales" />-->
        <!--<item
            android:id="@+id/menu_orders"
            android:icon="@drawable/ico_menu_gestion_pedidos"
            android:title="@string/menu_orders" />-->
        <!--<item
            android:id="@+id/menu_analysis_reports"
            android:icon="@drawable/ico_menu_analisis_reportes"
            android:title="@string/menu_analysis_reports" />-->

    </group>
    <item
        android:title="Acciones extras">
        <menu >
            <group
                android:id="@+id/group_extras"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_profileT"
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="@string/menu_profile" />
                <item
                    android:id="@+id/menu_exit"
                    android:icon="@drawable/ico_menu_salir"
                    android:title="@string/menu_exit" />
            </group>
        </menu>
    </item>
</menu>